@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Beta2 
+  	- Tweaked preferences adding tab'd views rather then all on one
+		page, also added account page back in. 
   	- Fixed popen in downsample, forcing binary mode, so that windows
 		works correctly (Thx SoundOfEmotion)
   	- Tweaked some defaults in .dist config file as well as the error 
